--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,18 @@
 html {
 	width: 100%;
 	height: 100%;
-	background-color: #394264;
+	background: url(../img/background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 body {
 	font-family: 'Gentium Book Basic', serif;
 	text-align: center;
+	color: #af592b;
+	background-color: rgba(0,0,0,0.6) ;
 }
 
 h1, h2, h3 {
@@ -21,20 +27,30 @@ h1, h2, h3 {
 }
 
 #allContent {
-	margin: 5em auto;
+
+	height: 100%;
 }
 
 header {
+	padding-top: 2em;
+}
+h1 {
 	font-size: 3em;
-	margin: 2em 0 1em;
+	border-bottom: solid 4px #af592b;
+	display: inline;
+	color: white;
+
 }
 
 #score {
-	margin: 2em 0;
+	margin: 5em auto 1em auto;
+	font-size: 20px;
+	color: white;
 }
 
 #questions {
 	margin: 2em 0;
+	font-size: 28px;
 }
 #options {
 	margin: 0 auto;
@@ -42,23 +58,51 @@ header {
 }
 .guessButton {
 	margin: 2em auto;
+	display: block;
+	width:10em;
+	height: 2em;
+	background: none;
+	border: 4px solid #2b81af;
+	border-radius: 4px;
+	box-shadow: none;
+	text-align:center;
+	font-size: 32px;
+	outline: none;
+	cursor: pointer;
+	color: #2b81af;
 }
+.guessButton:hover {
+	color: white;
+	background-color: #2b81af;
+}
+
 #options label {
 	display: block;
 	width:40em;
-	height: 4.7em;
-	background-color:transparent;
-	border-radius:4px;
-	border:1px solid #D0D0D0;
+	height: 5.5em;
+	background: none;
+	border: 4px solid #af592b;
+	border-radius: 4px;
+	box-shadow: none;
+	margin: 1em 0;
+	cursor: pointer;
+	color: #af592b;
+}
 
+#options label:hover {
+	background-color:#cf703e;
+	color: white;
+}
+#options label span:hover {
+	color: white;
 }
 
 #options label span {
-	text-align:center;
+	text-align:center; 
 	font-size: 32px;
 	display:block;
-	margin-top: 22px;
-	margin-bottom: 20px;
+	padding: 20px 20px 28px;
+	color: #af592b;
 }
 
 #options label input {
@@ -69,6 +113,7 @@ header {
 #options input:checked + span {
 	background-color:#404040;
 	color:#F7F7F7;
+	padding: 20px 20px 28px;
 }
 
 #options .yellow {
