--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ html {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	overflow: hidden;
 }
 
 body {
@@ -19,6 +20,8 @@ body {
 	text-align: center;
 	color: #af592b;
 	background-color: rgba(0,0,0,0.6) ;
+	height: 100%;
+	overflow: hidden;
 }
 
 h1, h2, h3 {
@@ -43,14 +46,14 @@ h1 {
 }
 
 #score {
-	margin: 5em auto 1em auto;
+	margin: 2em auto 1em auto;
 	font-size: 20px;
 	color: white;
 }
 
 #questions {
 	margin: 2em 0;
-	font-size: 28px;
+	font-size: 36px;
 }
 #options {
 	margin: 0 auto;
@@ -102,7 +105,7 @@ h1 {
 	font-size: 32px;
 	display:block;
 	padding: 20px 20px 28px;
-	color: #af592b;
+	color: #fff;
 }
 
 #options label input {
